Fall 2022 update: BF 1001 v 3.8

--- a/BF/BF 1001-Driver 2022.tex
+++ b/BF/BF 1001-Driver 2022.tex
@@ -1,4 +1,4 @@
-% Copyright (c) 2020 by Daniel R. Driver.
+% Copyright (c) 2022 by Daniel R. Driver.
 % !TEX encoding = UTF-8 Unicode
 % !TEX TS-program = XeLaTeX
 
@@ -12,7 +12,7 @@
 \input{\incl/variables}
 
 \onlinetrue % \Int{true}{false}
-\coursecode[3.7]{BF 1001}
+\coursecode[3.8]{BF 1001}
 \coursetitle[Biblical Foundations]{Hebrew Bible/Old Testament}
 
 % Taught as RLGS 1013 in:
@@ -40,13 +40,14 @@
 %   - Winter 2020(Int) - Nate Wall helped as TA
 %   - Fall 2020 - not scheduled Int, but driven online by Covid-19
 %   - Fall 2021(Int)
+%   - Fall 2022(Int) - run in parallel as DTS 2000: Intro to the Old Testament
 
 \professor{Daniel R. Driver}
 \phone{902-425-7051}
-\email{ddriver@astheology.ns.ca}
-\officehours[Microsoft Teams]{Tuesdays, 1:00--3:00 \PM}
+\email{daniel.driver@astheology.ns.ca}
+\officehours{Tuesdays, 1:00--3:00 \PM}
 
-\semester{Fall Term 2021}
+\semester{Fall 2022}
 \meets{\Int{Mondays}{Thursdays}}% \meets{on}{at}{in}
       {1:00--3:30 \PM}% if online, it prints "From 9:00 AM"
       {Classroom 3}% if online, it prints "Brightspace" with link
@@ -154,18 +155,26 @@ of options for a Bible.}
 
 Supplementary readings will be recommended throughout the semester and
 either placed on reserve or made available through the course website.
-See \autoref{bib}. Give this material good effort and attention. It
-represents some of the best contemporary readers of the Bible, and you
-will not want to miss their hermeneutical and theological insights.
+See \autoref{bib} for full bibliographic details. Please give this
+material good effort and attention.
 
-If you are looking to build your biblical studies library, I recommend
-Konrad Schmid's \emph{A Historical Theology of the Hebrew Bible}
-\cite{ks19} for a recent introduction to critical scholarship that goes
-beyond \cite{hbfb}. Brevard Childs \cite{bc79, bc92} remains useful,
-too. Also, the following reference works are worth owning and
-consulting. \cite{rlgs} in particular contains sound advice on core
-skills like reading religious texts, writing essays and reviews,
-revising essays, making oral presentations, and learning languages.
+If you are looking to build your knowledge and library of biblical
+scholarship, I recommend Ellen Davis's \emph{Opening Israel’s
+Scriptures} \cite{ed19} as a model of theological exegesis in North
+America, and Konrad Schmid's \emph{A Historical Theology of the Hebrew
+Bible} \cite{ks19} as a representative of recent European criticism.
+Both titles appeared in 2019, and they go beyond the rudiments of
+\cite{hbfb} in different ways. For further orientation, \emph{The
+Cambridge Companion to the Hebrew Bible/Old Testament} \cite{scms16} has
+many fine essay by leading scholars. Encyclopedic works by Brevard
+Childs \cite{bc79, bc92} remain useful, too. In addition, note the
+select titles on Africana readings \cite{hp10} and contemporary
+preaching \cite{fr11} of the Old Testament.
+
+The following basic works are also worth owning and consulting.
+\cite{rlgs} in particular contains sound advice on core skills like
+reading religious texts, writing essays and reviews, revising essays,
+making oral presentations, and learning languages.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
@@ -205,30 +214,30 @@ the needs of the class.
 
 	\unit{Law / Torah / Pentateuch} \\
 
-		& Genesis 1--11        & \HBFB{1--26}    & Davis \cite{ed03}, Seitz  \cite{cs96} & \Int{13}{} Sep. \\
-		& Genesis 12--50       & \HBFB{27--64}   & Levenson                  \cite{jl12} & \Int{20}{} Sep. \\
-		& Exodus 1--34         & \HBFB{65--75}   & McGinnis                  \cite{cm12} & \Int{27}{} Sep. \\
-		& Leviticus 1--16      & \HBFB{77--83}   & Anderson                  \cite{ga17} & \Int{ 4}{} Oct. \\
-	\noclass{Thanksgiving Monday: AST closed}                                            & \Int{11}{} Oct. \\
-	\noclass{Reading Week: No classes}                                                   & \Int{18}{} Oct. \\
-		& Deuteronomy          & \HBFB{85--99}   & \cite{heschel} or Moberly \cite{wm13} & \Int{25}{} Oct. \\
-	\reminder{A first short paper is \textbf{due} by the end of the fifth week of class}{25 Oct.}    \\ [1ex]% NB I moved this back from wk 6 to wk 5 because of the unusual two week break in F21. Perhaps move back to wk 6 next time.
+		& Genesis 1--11        & \HBFB{1--26}    & Davis \cite{ed03}, Seitz  \cite{cs96} & \Int{12}{} Sep. \\
+		& Genesis 12--50       & \HBFB{27--64}   & Levenson                  \cite{jl12} & \Int{19}{} Sep. \\
+		& Exodus 1--34         & \HBFB{65--75}   & McGinnis                  \cite{cm12} & \Int{26}{} Sep. \\
+		& Leviticus 1--16      & \HBFB{77--83}   & Anderson                  \cite{ga17} & \Int{ 3}{} Oct. \\
+	\noclass{Thanksgiving Monday: AST closed}                                            & \Int{10}{} Oct. \\
+		& Deuteronomy          & \HBFB{85--99}   & \cite{heschel} or Moberly \cite{wm13} & \Int{17}{} Oct. \\
+	\reminder{A first short paper is \textbf{due} by the end of the fifth week of class}{21 Oct.}    \\
+	\noclass{Reading Week: No classes}                                                   & \Int{24}{} Oct. \\ [1ex]% NB Moved back from wk 6 to wk 5 because of the extra week break for Thanksgiving Monday in F21 (similar in F22). Perhaps move back to wk 6 in future.
 
 	\unit{Prophets: Former \textit{\&} Latter} \\
 
-		& Joshua, Judges       & \HBFB{103--121} & Trible                    \cite{pt84} & \Int{ 1}{} Nov. \\
-		& 1 \& 2 Samuel        & \HBFB{123--134} & Chapman                   \cite{sc16} & \Int{ 8}{} Nov. \\
-		& 1 \& 2 Kings         & \HBFB{135--143} & Alter                     \cite{ra81} & \Int{15}{} Nov. \\
-		& Isaiah 1--12, 36--40 & \HBFB{145--168} & \cite{irenaeus} or Davis  \cite{ed14} & \Int{22}{} Nov. \\
-		& Hosea--Jonah         & \HBFB{169--184} & Nogalski          \cite{jn07a, jn07b} & \Int{29}{} Nov. \\
-	\reminder{A second short paper is \textbf{due} by the end of the eleventh week of class}{6 Dec.}    \\ [1ex]
+		& Joshua, Judges       & \HBFB{103--121} & Trible                    \cite{pt84} & \Int{31}{} Oct. \\
+		& 1 \& 2 Samuel        & \HBFB{123--134} & Chapman                   \cite{sc16} & \Int{ 7}{} Nov. \\
+		& 1 \& 2 Kings         & \HBFB{135--143} & Alter                     \cite{ra81} & \Int{14}{} Nov. \\
+		& Isaiah 1--12, 36--40 & \HBFB{145--168} & \cite{irenaeus} or Davis  \cite{ed14} & \Int{21}{} Nov. \\
+		& Hosea--Jonah         & \HBFB{169--184} & Nogalski          \cite{jn07a, jn07b} & \Int{28}{} Nov. \\
+	\reminder{A second short paper is \textbf{due} by the end of the tenth week of class}{2 Dec.}    \\ [1ex]% NB Moved back from wk 11 to wk 10 because of the nearness of the last day of class in F22. Perhaps move back to wk 11 in future.
 
 	\unit{Writings: Wisdom \textit{\&} Praise} \\
 
-		& Psalms 1--8, 41, 51, 89–90 & \HBFB{187--202} & deClaissé-Walford  \cite{ndw14} & \Int{ 6}{} Dec. \\
-		& Ecclesiastes         & \HBFB{203--246} & Dell \cite{kd13} or Fox   \cite{mf04} & \Int{13}{} Dec. \\ [1ex]
+		& Psalms 1--8, 41, 51, 89–90 & \HBFB{187--202} & deClaissé-Walford  \cite{ndw14} & \Int{ 5}{} Dec. \\
+		& Ecclesiastes         & \HBFB{203--246} & Dell \cite{kd13} or Fox   \cite{mf04} & \Int{12}{} Dec. \\ [1ex]
 
-	\reminder{End of Term: Final marks are due for all courses}{16 Dec.} \\
+	\reminder{End of Term: Final marks are due for all courses}{15 Dec.} \\
 
 	\bottomrule
   \end{tabular}
@@ -250,18 +259,19 @@ The grade structure for \ccode has the following elements.
 	careful reading of the assigned material, and to help explore its
 	significance. Individual posts are not marked, though points may be
 	deducted from your final grade if the exercise is not taken
-	seriously. In general, prompt responses submitted online should not
-	exceed 300 words. Try to post the in the morning of class days,
-	after you do the reading but before you listen to the lecture. You
-	are invited (but not strictly required) to respond to and interact
-	with classmates on the forums through the rest of the day.
+	seriously. Prompt responses submitted online should be around 250
+	words long, and should not exceed 300 words. Try to post the in the
+	morning of class days, after you do the reading but before you
+	listen to the lecture. You are invited (but not strictly required)
+	to respond to and interact with classmates on the forums through the
+	rest of the day.
 
 	\item Two \textbf{short papers} will facilitate student engagement
 	with the art of biblical interpretation. One is keyed to the
 	exposition of a model, the other to a short biblical text. Each
 	should be about 2,500 words in length. Either paper (your choice) is
 	due at the end of the fifth week of class; the other one is due at
-	the end of the eleventh week.% NB I moved this back from wk 6 to wk 5 because of the unusual two week break in F21. Perhaps move back to wk 6 next time.
+	the end of the tenth week.% NB Moved back from wks 6 and 11 due to unusual scheduling issues. Perhaps return to 6 and 11 in future.
 
 	\begin{enumerate}
 
@@ -347,8 +357,7 @@ The breakdown for the semester's total work is shown in
 
 Literature on the Bible is vast. The works listed here have been
 selected for clarity, insight, and theological alertness. Some will be
-distributed as supplementary texts, as per \autoref{supplementary}. All
-of them model compelling, highly competent ways of reading the HB/OT.
+distributed as supplementary texts, as per \autoref{supplementary}.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
@@ -364,6 +373,8 @@ of them model compelling, highly competent ways of reading the HB/OT.
 
 \bibitem{sc16} Chapman, Stephen B. “1 Samuel 1–12.” Pages 71–119 in \emph{1 Samuel as Christian Scripture: A Theological Commentary}. Grand Rapids: Eerdmans, 2016.
 
+\bibitem{scms16} Chapman, Stephen. B. and Marvin A. Sweeney, eds. \emph{The Cambridge Companion to the Hebrew Bible/Old Testament}. Cambridge, Cambridge University Press, 2016.
+
 \bibitem{bc79} Childs, Brevard S. \emph{Introduction to the Old Testament as Scripture}. Philadelphia: Fortress, 1979.
 
 \bibitem{bc92} Childs, Brevard S. \emph{Biblical Theology of the Old and New Testaments: Theological Reflection on the Christian Bible}. Minneapolis: Fortress, 1992.
@@ -373,6 +384,8 @@ of them model compelling, highly competent ways of reading the HB/OT.
 \bibitem{ed03} Davis, Ellen F. “Teaching the Bible Confessionally in the Church.” Pages 9–26 in \emph{The Art of Reading Scripture}. Edited by Ellen F. Davis and Richard B. Hays. Grand Rapids: Eerdmans, 2003.
 
 \bibitem{ed14} Davis, Ellen F. \emph{Biblical Prophecy: Perspectives for Christian Theology, Discipleship, and Ministry}. Louisville: Westminster John Knox, 2014.
+
+\bibitem{ed19} Davis, Ellen F. \emph{Opening Israel’s Scriptures}. Oxford: Oxford University Press, 2019.
 
 \bibitem{ndw14} deClaissé-Walford, Nancy L. “The Meta-Narrative of the Psalter.” Pages 363–76 in \emph{The Oxford Handbook of the Psalms}. Edited by William P. Brown. Oxford: Oxford University Press, 2014.
 
@@ -402,7 +415,11 @@ of them model compelling, highly competent ways of reading the HB/OT.
 
 \bibitem{jn07b} Nogalski, James D. “Recurring Themes in the Book of the Twelve: Creating Points of Contact for a Theological Reading.” \emph{Interpretation} 61.2 (2007): 125–36.
 
+\bibitem{hp10} Page, Hugh R. et al., eds. \emph{The Africana Bible: Reading Israel’s Scriptures from Africa and the African Diaspora}. Minneapolis: Fortress, 2010.
+
 \bibitem{db89} Patrick, Dale. “Studying Biblical Law as a Humanities.” \emph{Semeia} 45 (1989): 27–47.
+
+\bibitem{fr11} Rutledge, Fleming. \emph{And God Spoke to Abraham: Preaching From the Old Testament}. Grand Rapids: Eerdmans, 2011.
 
 \bibitem{ks19} Schmid, Konrad. \emph{A Historical Theology of the Hebrew Bible}. Translated by Peter Altmann. Grand Rapids: Eerdmans, 2019. ISBN 978-0802876935.
 
