--- a/includes/title.tex
+++ b/includes/title.tex
@@ -1,4 +1,4 @@
-\ProvidesFile{title.tex}[2020/12/21 v2.2 -- Syllabus title page]
+\ProvidesFile{title.tex}[2022/09/11 v2.3 -- Syllabus title page]
 
 \frenchspacing % doesn't load in preamble, for some reason
 \begin{titlepage}
@@ -11,8 +11,8 @@
       \parbox[t]{\the\toptxt}{
         \fontsize{18}{18}\selectfont
         \textsc{\ccode\\
-        Course Syllabus\\
-        \csemester}}
+        \csemester\\
+        Course Syllabus}}
       \hfill
       \parbox[t]{100pt}{
         \mbox{}\\[-13pt] % dummy line to align parboxes
