--- a/includes/variables.tex
+++ b/includes/variables.tex
@@ -1,4 +1,4 @@
-\ProvidesFile{variables.tex}[2020/12/17 v2.2 -- Syllabus variables]
+\ProvidesFile{variables.tex}[2022/09/11 v2.3 -- Syllabus variables]
 
 \usepackage{xspace} % make manual spaces (like \mycmd\ ) unnecessary
 \usepackage{xifthen} % provides \isempty test
@@ -36,13 +36,13 @@
   \renewcommand\pphone{\addfontfeatures{Numbers=Monospaced}#1\xspace}}
 \newcommand\email[1]{
   \renewcommand\pemail{\href{mailto:#1}{#1}\xspace}}
-\newcommand\officehours[2][Library, Room 5-North]{
+\newcommand\officehours[2][AST Library/MS Teams]{
   \renewcommand\poffice{#1\xspace}
   \renewcommand\phours{#2\xspace}}
 %
 \newcommand\coursecode[2][1.0]{
-  \renewcommand\cversion{#1\Int{-i}{}\xspace}
-  \renewcommand\ccode{#2\Int{(Int)}{}\xspace}}
+  \renewcommand\cversion{#1\xspace}
+  \renewcommand\ccode{#2\xspace}}
 \newcommand\coursetitle[2][]{
   \ifthenelse{\isempty{#1}}%
     {}% do nothing if #1 is empty, else:
