Hebrew II for F22

--- a/includes/variables.tex
+++ b/includes/variables.tex
@@ -36,7 +36,7 @@
   \renewcommand\pphone{\addfontfeatures{Numbers=Monospaced}#1\xspace}}
 \newcommand\email[1]{
   \renewcommand\pemail{\href{mailto:#1}{#1}\xspace}}
-\newcommand\officehours[2][AST Library/MS Teams]{
+\newcommand\officehours[2][AST Library/Teams]{
   \renewcommand\poffice{#1\xspace}
   \renewcommand\phours{#2\xspace}}
 %
