--- a/HB/HB 2202-Driver 2022.tex
+++ b/HB/HB 2202-Driver 2022.tex
@@ -1,4 +1,4 @@
-% Copyright (c) 2019 by Daniel R. Driver.
+% Copyright (c) 2022 by Daniel R. Driver.
 % !TEX encoding = UTF-8 Unicode
 % !TEX TS-program = XeLaTeX
 
@@ -12,7 +12,7 @@
 \input{\incl/variables}
 
 %\onlinetrue % \Int{true}{false}
-\coursecode[3.1]{HB 2202}
+\coursecode[3.6]{HB 2202}
 \coursetitle[Hebrew Bible]{Beginning Biblical Hebrew II}
 
 % Taught as HEBR 2023 in:
@@ -22,41 +22,36 @@
 %   - Winter 2016
 % Taught as HB 2202 in:
 %   - Winter 2019
+%   - Fall 2022 (hybrid: 1 on campus, 1 on Teams)
 
 \professor{Daniel R. Driver}
 \phone{902-425-7051}
-\email{ddriver@astheology.ns.ca}
-\officehours{By Appointment}%{Thursdays, 12:30--2:00 \PM}
+\email{daniel.driver@astheology.ns.ca}
+\officehours{Tuesdays, 1:00--3:00 \PM}
 
-\semester{Winter Term 2019}
+\semester{Fall 2022}
 \meets{Tuesdays}% \meets{on}{at}{in}
-      {1:00--3:30 \PM}
-      {King's Room}
+      {9:00--11:30 \AM}
+      {Classroom 3/Teams}
 \website{danieldriver.com}
 \cdescription[HB 2201]{% copy from the current Academic Calendar; [] for prereqs
-	A more detailed study of Hebrew grammar and syntax through the
-	reading of selected biblical texts, this course is designed as a
-	continuation of HB 2201. For a complete introduction, students will
-	continue through two semesters of study. In the second semester
-	emphasis will fall on less regular paradigms and more complicated
-	syntax. The basic goal of the entire course is for students to
-	become proficient in the rudiments of biblical Hebrew, sufficient
-	for the independent reading of biblical books in this language.
-	(This course is open to undergraduate students from other
-	universities. Please contact the AST Registrar to enroll as a Letter
-	of Permission student.)
+	The natural continuation of HB 2201, this course is for those who
+	wish to have a complete introduction to the basics of biblical
+	Hebrew. Students will progress through encounters with less regular
+	paradigms and more complicated syntax, building confidence as they
+	master select readings from Genesis. The goal of the full course
+	series, in two parts, is a proficiency in the rudiments of Hebrew
+	that is sufficient for the independent reading of biblical books.
 }% end of course description
 \objectives{% recall Bloom's taxonomy: http://www.celt.iastate.edu/teaching/RevisedBlooms1.html
 	The basic goal of this course is to become proficient in the
 	rudiments of biblical Hebrew, sufficient for the independent reading
-	of biblical books in this language. The introductory course is
-	designed for two semesters of study, and it is presumed that
-	students will take the course for the entire academic year. In the
-	first semester students will learn everything from the alphabet to
-	the basics of Hebrew nouns and verbs. In the second semester the
-	emphasis will fall on less regular paradigms (learned inductively)
-	and more complicated syntax. The steady acquisition of vocabulary
-	will be emphasized across both semesters.
+	of biblical books in this language. It is part of a series designed
+	for two semesters of study. In the first semester students will
+	learn everything from the alphabet to the basics of Hebrew nouns and
+	verbs. In the second semester the emphasis will fall on less regular
+	paradigms and more complicated syntax. The steady acquisition of
+	vocabulary will be emphasized across both semesters.
 }% end of learning objectives
 
 \input{\incl/preamble}
@@ -73,50 +68,53 @@
 \label{texts}
 
 The following texts are required. Students are strongly encouraged to
-purchase their own copies.
+purchase their own copies. Digital copies are available within
+\href{https://www.logos.com/product/177582/learning-biblical-hebrew-bundle}{Logos}.
+A hard copy of the workbook at least is preferable, since it is filled
+with worksheets on which you will want to write.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
-\begin{thebibliography}{BBH}% use the longest item in the bibliography
+\begin{thebibliography}{Workbook}% use the longest item in the bibliography
 
-    \bibitem[BBH]{bbh}
-    John A. Cook and Robert D. Holmstedt.
-    \emph{Beginning Biblical Hebrew: A Grammar and Illustrated Reader}.
-    Grand Rapids: Baker Academic, 2013. ISBN 978-0801048869. A helpful
-    set of study aids are available \href{http://www.bakerpublishinggroup.com/books/beginning-biblical-hebrew/5629/students/esources}{online at bakeracademic.com}.
+    \bibitem[Grammar]{lbh}
+    Karl V. Kutz and Rebekah Josberger.
+    \emph{Learning Biblical Hebrew: Reading for Comprehension: An Introductory Grammar}.
+    Bellingham, WA: Lexham, 2018. ISBN 978-1683590842.
+    Note that LBH has a \href{http://www.learningbiblicalhebrew.com/}{companion site with resources for teachers and students}.
 
-    \bibitem[TM]{tm}
-    Takamitsu Muraoka.
-    \emph{A Biblical Hebrew Reader: With an Outline Grammar}.
-    Leuven: Peeters, 2017. ISBN 978-9042934900.
+    \bibitem[Workbook]{work}
+    Karl V. Kutz and Rebekah Josberger.
+    \emph{Learning Biblical Hebrew: A Graded Reader with Exercises}.
+    Bellingham, WA: Lexham, 2019. ISBN 978-1683592440.
+
+\end{thebibliography}
+\endgroup
+
+
+\section{Supplementary Texts}
+\label{supplementary}
+
+The following works are worth owning and consulting, especially
+\cite{bhs} and \cite{bdb}. \cite{rlgs} contains sound advice on core
+skills like reading religious texts, writing essays and reviews,
+revising essays, making presentations, and learning languages.
+
+\begingroup
+\renewcommand{\section}[2]{}% temporarily remove the section heading
+\begin{thebibliography}{Making Sense}% use the longest item in the bibliography
 
     \bibitem[BHS]{bhs}
     \emph{Biblia Hebraica Stuttgartensia}.
     Stuttgart: Deutsche Bibel\-ge\-sell\-schaft, 1997. ISBN 978-1598561630.
-    A paperback edition, marketed to students, is also available.
-    Serious students will want their own copy of the standard critical
-    edition of the Hebrew Bible. The instructor will also provide
-    photocopies.
+    This remains the standard critical edition, though it is gradually
+    being replaced by the BHQ. A paperback edition, marketed to
+    students, is also available; the hardback is much more durable.
 
     \bibitem[BDB]{bdb}
     Francis Brown, S.\,R. Driver and C.\,A. Briggs. \emph{The
     Brown-Driver-Briggs Hebrew and English Lexicon}. Peabody, Mass:
     Hendrickson, 2004 (orig. ed. 1906).
-
-\end{thebibliography}
-\endgroup
-
-\section{Supplementary Texts}
-\label{supplementary}
-
-The following reference works are worth owning and consulting.
-\cite{rlgs} in particular contains sound advice on core skills like
-reading religious texts, writing essays and reviews, revising essays,
-making oral presentations, and learning languages.
-
-\begingroup
-\renewcommand{\section}[2]{}% temporarily remove the section heading
-\begin{thebibliography}{Making Sense}% use the longest item in the bibliography
 
 	\bibitem[Making Sense]{rlgs} Northey, Margot, Bradford A. Anderson, and Joel N. Lohr.
 	\emph{Making Sense in Religious Studies: A Student's Guide to Research and Writing}.
@@ -130,6 +128,7 @@ making oral presentations, and learning languages.
 \end{thebibliography}
 \endgroup
 
+
 \section{Course Outline}
 \label{outline}
 
@@ -137,51 +136,35 @@ We will adhere to the schedule in \autoref{schedule} as closely as
 possible, though the professor reserves the right to adjust it to suit
 the needs of the class.
 
-\setcolumncount{3}% set up \sessioncount, \unit{}, \noclass{}, and \reminder{memo}{date} macros
+\setcolumncount{4}% set up \sessioncount, \unit{}, \noclass{}, and \reminder{memo}{date} macros
 \begin{table}[htbp]% set to `p' to put the schedule on its own page
   \centering%\addfontfeature{ItalicFont=SBLBibLit}
-  \begin{tabular}{@{}r<{.}@{ }lr}
+  \begin{tabular}{@{}r<{.}@{ }llr}
     \toprule
-    \bfseries L & \textbf{BBH Grammar Lesson} & \textbf{Due Date} \\
+    \bfseries Ch & \textbf{Learning Biblical Hebrew: Grammar} & \textbf{Workbook} & \textbf{Date} \\
     \midrule
-    27, 28  & Reading 5 (Genesis 3\texthebrew{ב}); \texthebrew{‫קַל‬} Imperfect Conjugation\null                    &  8 Jan.     \\
-    29      & \texthebrew{‫בִּנְיָנִים: פִּעֵל וְהִפְעִיל‬}\null                                       & 11 Jan.     \\ \addlinespace
-    30, r-6 & Main and Subordinate Clauses; Reading 6 (Genesis 22\texthebrew{ב})\null    & 15 Jan.     \\
-    31      & Attached Pronouns: Plural                                                  & 18 Jan.     \\ \addlinespace
-    32, 33  & Adjectives; Demonstrative Pronouns                                         & 22 Jan.     \\
-	34      & \texthebrew{‫סְגֹלֶת‬} Noun Pattern                                           & 25 Jan.     \\ \addlinespace
-    r-7, 35 & Reading 7 (Genesis 37\texthebrew{ב}); Past Narrative Conjugation           & 29 Jan.     \\
-    36      & \texthebrew{‫וַיְהִי‬}\null                                                    &  1 Feb.     \\ \addlinespace
-    37, 38  & \texthebrew{‫בִּנְיָנִים: נִפְעַל וְהִתְפַּעֵל‬}; Dynamic and Stative Verbs               &  5 Feb.     \\
-    r-8     & Reading 8 (Genesis 3\texthebrew{ג})\null                                   &  8 Feb.     \\ \addlinespace
-    39, 40  & Jussives and Imperatives; Attached Pronouns with Verbs                     & 12 Feb.     \\
-    r-7, 8  & Readings: Catch up and review                                                    & 15 Feb.     \\ \addlinespace
-
-%    \midrule
-    \noclass{Reading Week}                                                               & 18--22 Feb. \\
-	\reminder{\textbf{Midterm Exam}: A take-home exam is due by the end of the week}{22 Feb.}    \\ \addlinespace
-%    \midrule
-
-    41, r-9 & Word Order with Topic and Focus; Reading 9 (Genesis 22\texthebrew{ג})\null & 26 Feb.     \\
-    42      & Participles                                                                &  1 Mar.     \\ \addlinespace
-    43, 44  & Foreground and Background of Narrative; The Verbal System                  &  5 Mar.     \\
-    r-10    & Reading 10 (Genesis 37\texthebrew{ג})\null                                 &  8 Mar.     \\ \addlinespace
-    45, 46  & Numerals; Topic                                                            & 12 Mar.     \\
-    r-11    & Reading 11 (Genesis 1)                                                     & 15 Mar.     \\ \addlinespace
-    47, 48  & Accents; Complements and Adjuncts                                          & 19 Mar.     \\
-    r-12    & Reading 12 (Genesis 47)                                                    & 22 Mar.     \\ \addlinespace
-    49, 50  & Case Relations; Lexical Semantics                                          & 26 Mar.     \\
-    r-13    & Reading 13 (Genesis 50)                                                    & 29 Mar.     \\ \addlinespace
-    r-14    & Selected Hebrew Readings (Muraoka)                                         &  2 Apr.     \\
-    \reminder{\textbf{Final Exam}: A take-home exam is due by the end of the week}{5 Apr.}             \\
-
+    11     & Review Chs. 1--10; Intro to Hebrew Verbs &              & 13 Sep \\
+    12     & Vowel Changes in Verbs                   & R11--12      & 20 Sep \\
+    13     & Qal Perfects                             & E13, R13     & 27 Sep \\
+    14     & Qal Imperfects                           & E14, R14     &  4 Oct \\
+    15     & Qal Volitionals                          & E15, R15     & 11 Oct \\
+    16     & Qal Participles and Infinitives          & E16, R16     & 18 Oct \\
+	\noclass{Reading Week (AST Open)}                                & 25 Oct \\
+    17     & Qal Waw Consecutives                     & R17          &  1 Nov \\
+    18     & Niphal                                   & E18, R18     &  8 Nov \\
+    19     & Piel, Pual, and Hithpael                 & E19, R19     & 15 Nov \\
+    20--21 & Hiphil and Hophal; Rare Verb Stems       & E20, R20     & 22 Nov \\
+    22     & Verbs with Object Suffixes               & R22--        & 29 Nov \\
+    23     & Irregular Features with Object Suffixes  & E23, R22--23 &  6 Dec \\
+	\reminder{End of Term: Final marks are due for all courses}{15 Dec} \\
     \bottomrule
   \end{tabular}
-  \caption{Schedule of Lessons \& Readings}
+  \caption{Schedule of Lessons by Chapter, Exercise (E) \& Reading (R)}
   \label{schedule}
 \end{table}
 
 See the AST website for a list of other \href{http://www.astheology.ns.ca/students/academic-dates.html}{important dates}.
+
 
 \section{Evaluation}
 \label{evaluation}
@@ -190,14 +173,41 @@ The grade structure for \ccode has the following elements.
 
 \begin{enumerate}
  \item
-    Students are expected to complete all lessons and exercises from
-    \cite{bbh}, and to study and master all sections (\S) from
-    \cite{tm}. \textbf{Quizzes} based on the weekly assignments will be
-    given regularly. Some of these may come directly from \cite{bbh}.
+    Students are expected to read and study all \textbf{lessons} in
+    Chapters 11–23 of the \cite{lbh}, and to complete the accompanying
+    \textbf{exercises} and Hebrew \textbf{readings} in the \cite{work}.
+    Students should use the answer key to correct and evaluate their own
+    work. Assignments will be assessed at the end of each week for
+    completeness only. Students who are taking the course for credit
+    should be prepared to show evidence of their efforts and, if
+    requested, to upload scans (PDFs) or photos of any relevant pages
+    from the \cite{work} to the course website.
  \item
-   A cumulative \textbf{midterm exam} (take home) is due by the end of reading week.
- \item
-   A comprehensive \textbf{final exam} (take home) is due by the end of the last week of class.
+    \textbf{Quizzes} are based on the \cite{lbh} and \cite{work}
+    assignments. Between six and ten quizzes will be set throughout the
+    twelve-week course. All quizzes are closed book. Students must take
+    opportunities accurately to assess what they have learned and
+    retained. Continuing education students and auditors are encouraged
+    to participate in these exercises fully by scoring and correcting
+    their own work.
+
+%%%%%%% For online delivery
+% \item
+%    Students who are taking the course for credit must use a
+%    \textbf{proctor} to administer and attest their quizzes. Select
+%    someone over the age of 18 to act as your proctor. Instruct them to
+%    email your instructor
+%    (\href{mailto:ddriver@astheology.ns.ca}{ddriver@astheology.ns.ca})
+%    to receive electronic copies of all six quizzes for this course.
+%    When you are ready to take each quiz, your proctor will provide you
+%    with a printed copy of the test materials. Be sure that you include
+%    compensation for them to do so, as appropriate. When you are
+%    finished with each quiz, the proctor will verify that it was taken
+%    as prescribed, attest it by signing their name under your name, and
+%    make sure that you submit it online. Please upload each quiz to the
+%    correct assignment slot on Teams. You will obviously need to scan
+%    each one as a PDF (preferred) or take a photo of each page with your
+%    cell phone.
 \end{enumerate}
 
 The breakdown for the semester's total work is shown in
@@ -208,9 +218,8 @@ The breakdown for the semester's total work is shown in
   {\lining
   \begin{tabular}{lr}
     \toprule
-    Quizzes      & 40\% \\
-    Midterm Exam & 30\% \\
-    Final Exam   & 30\% \\
+    Workbook & 40\% \\
+    Quizzes  & 60\% \\
     \bottomrule
   \end{tabular}}
   \caption{Distribution of Grades}
@@ -257,12 +266,22 @@ especially:
 
     \begin{itemize}
       \item
+        Cook, John A. and Robert D. Holmstedt.
+        \emph{Beginning Biblical Hebrew: A Grammar and Illustrated Reader}.
+        Grand Rapids: Baker Academic, 2013.
+        Study aids are available at \href{http://www.bakerpublishinggroup.com/books/beginning-biblical-hebrew/5629/students/esources}{bakeracademic.com}.
+        At AST: PJ 4567.3 C66 2013
+      \item
         Kittel, Bonnie, Vicki Hoffer, and Rebecca Abts Wright.
         \emph{Biblical Hebrew: Text and Workbook} [and Audio CD].
         2nd edition. New Haven: Yale, 2004.
       \item
         Martin, J.\,D. \emph{Davidson’s Introductory Hebrew Grammar}.
         27th edition. Edinburgh: T\&T Clark, 1993. At AST: PJ 4567 D37 1962
+      \item
+        Muraoka, Takamitsu.
+        \emph{A Biblical Hebrew Reader: With an Outline Grammar}.
+        Leuven: Peeters, 2017. At AST: PJ 4567.3 M87 2017
       \item
         Pratico, Gary and Miles Van Pelt. \emph{Basics of Biblical Hebrew Grammar}.
         Grand Rapids: Zondervan, 2001. At AST: PJ 4567.3 P73 2007
