norm against DSt 2061 (Heb II, W21)

--- a/HB/HB 2202-Driver 2022.tex
+++ b/HB/HB 2202-Driver 2022.tex
@@ -22,7 +22,8 @@
 %   - Winter 2016
 % Taught as HB 2202 in:
 %   - Winter 2019
-%   - Fall 2022 (hybrid: 1 on campus, 1 on Teams)
+%   - Winter 2021 (as DSt 2061)
+%   - Fall 2022 (hybrid)
 
 \professor{Daniel R. Driver}
 \phone{902-425-7051}
@@ -44,14 +45,14 @@
 	that is sufficient for the independent reading of biblical books.
 }% end of course description
 \objectives{% recall Bloom's taxonomy: http://www.celt.iastate.edu/teaching/RevisedBlooms1.html
-	The basic goal of this course is to become proficient in the
-	rudiments of biblical Hebrew, sufficient for the independent reading
-	of biblical books in this language. It is part of a series designed
-	for two semesters of study. In the first semester students will
-	learn everything from the alphabet to the basics of Hebrew nouns and
-	verbs. In the second semester the emphasis will fall on less regular
-	paradigms and more complicated syntax. The steady acquisition of
-	vocabulary will be emphasized across both semesters.
+	The basic goal of this course is for students to become proficient
+	in the rudiments of biblical Hebrew, sufficient for the independent
+	reading of biblical books in this language. Students will be given
+	support as they continue to develop their ability to learn Hebrew
+	independently. Building on their initial study in HB 2201 or
+	elsewhere, they will read and translate a passages from Genesis (the
+	Joseph Story) as they advance in their ability to read the Hebrew
+	Bible with confidence and understanding.
 }% end of learning objectives
 
 \input{\incl/preamble}
@@ -197,17 +198,17 @@ The grade structure for \ccode has the following elements.
 %    \textbf{proctor} to administer and attest their quizzes. Select
 %    someone over the age of 18 to act as your proctor. Instruct them to
 %    email your instructor
-%    (\href{mailto:ddriver@astheology.ns.ca}{ddriver@astheology.ns.ca})
-%    to receive electronic copies of all six quizzes for this course.
-%    When you are ready to take each quiz, your proctor will provide you
-%    with a printed copy of the test materials. Be sure that you include
+%    (\href{mailto:daniel.driver@astheology.ns.ca}{daniel.driver@astheology.ns.ca})
+%    to receive electronic copies of the quizzes for this course. When
+%    you are ready to take each quiz, your proctor will provide you with
+%    a printed copy of the test materials. Be sure that you include
 %    compensation for them to do so, as appropriate. When you are
 %    finished with each quiz, the proctor will verify that it was taken
 %    as prescribed, attest it by signing their name under your name, and
 %    make sure that you submit it online. Please upload each quiz to the
 %    correct assignment slot on Teams. You will obviously need to scan
-%    each one as a PDF (preferred) or take a photo of each page with your
-%    cell phone.
+%    each one as a PDF (preferred) or take a photo of each page with
+%    your cell phone.
 \end{enumerate}
 
 The breakdown for the semester's total work is shown in
