F23-BF 1001 schedule and texts

--- a/BF/BF 1001-Driver 2023.tex
+++ b/BF/BF 1001-Driver 2023.tex
@@ -11,8 +11,8 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-\onlinetrue % \Int{true}{false}
-\coursecode[3.8]{BF 1001}
+%\onlinetrue % \Int{true}{false}
+\coursecode[4.0-WIP]{BF 1001}
 \coursetitle[Biblical Foundations]{Hebrew Bible/Old Testament}
 
 % Taught as RLGS 1013 in:
@@ -41,16 +41,17 @@
 %   - Fall 2020 - not scheduled Int, but driven online by Covid-19
 %   - Fall 2021(Int)
 %   - Fall 2022(Int) - run in parallel as DTS 2000: Intro to the Old Testament
+%   - Fall 2023 - Version 4.0; on campus; only text: NJPS Study Bible
 
 \professor{Daniel R. Driver}
 \phone{902-425-7051}
 \email{daniel.driver@astheology.ns.ca}
-\officehours{Tuesdays, 1:00--3:00 \PM}
+\officehours{Thursdays, 2:00--4:00 \PM}
 
 \semester{Fall 2022}
 \meets{\Int{Mondays}{Thursdays}}% \meets{on}{at}{in}
-      {1:00--3:30 \PM}% if online, it prints "From 9:00 AM"
-      {Classroom 3}% if online, it prints "Brightspace" with link
+      {6:00--8:30 \PM}% if online, it prints "From 9:00 AM"
+      {Flahiff Room}% if online, it prints "Brightspace" with link
 \website{danieldriver.com}
 \cdescription[none. The course is required for HB courses at or above the 3000-level. It is open to Continuing Education participants]{% copy from the current Academic Calendar; [] for prereqs
 	The First Testament of Christian Scripture is a fundamental part of
@@ -112,43 +113,27 @@
 \section{Required Texts \& Materials}
 \label{texts}
 
-The following texts are required. Students are strongly encouraged to
-purchase their own copies. Library copies that are not reference works
-will be placed on a 2-hour reserve.
+The following text is required. Students are strongly encouraged to
+purchase their own copy. A non-circulating copy is held in the AST
+Library reference section (BS 895 J4 2014).
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
-\begin{thebibliography}{Irenaeus}% use the longest item in the bibliography
+\begin{thebibliography}{NJPS}% use the longest item in the bibliography
 
-	\bibitem[NRSV]{nrsv} M.\,D. Coogan, ed.
-    \emph{New Oxford Annotated Bible with Apocrypha: NRSV}. 5th ed.
-    Oxford: Oxford University Press, 2018.
-    ISBN 978-0190276072.
-
-	\bibitem[HBFB]{hbfb} J. Kaminsky and J. Lohr.
-	\emph{The Hebrew Bible for Beginners: A Jewish and Christian Introduction}.
-	Nashville: Abingdon Press, 2015.
-	ISBN 978-1426775635.
-
-	\bibitem[Heschel]{heschel} Abraham Heschel.
-	\emph{The Sabbath: Its Meaning for Modern Man}.
-	New York: Farrar, Straus and Giroux, 1951 (repr. 2005).
-	ISBN 978-0374529758.
-
-	\bibitem[Irenaeus]{irenaeus} St Irenaeus of Lyons.
-	\emph{On the Apostolic Preaching}.
-	Trans. John Behr.
-	Crestwood, NY: St Vladimir’s Seminary Press, 1997.
-	ISBN 978-0881411744.
+	\bibitem[NJPS]{njps} Berlin, Adele, and Marc Zvi Brettler, eds.
+    \emph{The Jewish Study Bible: Jewish Publication Society Tanakh Translation}.
+    2nd ed. Oxford: Oxford University Press, 2014.
+    % ISBN 978-0199978465.
 
 \end{thebibliography}
 \endgroup
 
-An good alternative study Bible is the NJPS: Adele Berlin and Marc Zvi
-Brettler, eds., \emph{The Jewish Study Bible: Second Edition} (Oxford:
-Oxford University Press, 2014). \href{https://danieldriver.com/courses/bf-1001/}{See
-my website for links to required and recommended books, and a discussion
-of options for a Bible.}
+Optionally, for an ecumenical study Bible with a gender-inclusive
+translation of the full Christian Bible, see Michael D. Coogan, ed.,
+\emph{The New Oxford Annotated Bible: New Revised Standard Version with
+the Apocrypha}, 5th ed. (Oxford: Oxford University Press, 2018).
+% ISBN 978-0190276072.
 
 \section{Supplementary Texts}
 \label{supplementary}
@@ -158,18 +143,72 @@ either placed on reserve or made available through the course website.
 See \autoref{bib} for full bibliographic details. Please give this
 material good effort and attention.
 
-If you are looking to build your knowledge and library of biblical
-scholarship, I recommend Ellen Davis's \emph{Opening Israel’s
-Scriptures} \cite{ed19} as a model of theological exegesis in North
-America, and Konrad Schmid's \emph{A Historical Theology of the Hebrew
-Bible} \cite{ks19} as a representative of recent European criticism.
-Both titles appeared in 2019, and they go beyond the rudiments of
-\cite{hbfb} in different ways. For further orientation, \emph{The
-Cambridge Companion to the Hebrew Bible/Old Testament} \cite{scms16} has
-many fine essay by leading scholars. Encyclopedic works by Brevard
-Childs \cite{bc79, bc92} remain useful, too. In addition, note the
-select titles on Africana readings \cite{hp10} and contemporary
-preaching \cite{fr11} of the Old Testament.
+
+Introductions to the Hebrew Bible/Old Testament abound. I have not assigned one for this class, though I have used a number of them in the past. Students may find one or more the following introductory and companion volumes useful.
+
+\begingroup
+\renewcommand{\section}[2]{}% temporarily remove the section heading
+\begin{thebibliography}{99}% use the longest item in the bibliography
+
+	\bibitem{jb16} Barton, John, ed.
+	\emph{The Hebrew Bible: A Critical Companion}.
+	Princeton: Princeton University Press, 2016. 
+
+	\bibitem{bb05} Birch, Bruce, Walter Brueggemann, Terence E. Fretheim, and David L. Petersen.
+	\emph{A Theological Introduction to the Old Testament}.
+	2nd ed. Nashville: Abingdon, 2005.
+	AST library: BS 1192.5 T43 2005.
+
+	\bibitem{scms16} Chapman, Stephen B., and Marvin A. Sweeney, eds.
+	\emph{The Cambridge Companion to the Hebrew Bible/Old Testament}.
+	New York: Cambridge University Press, 2016.
+	AST library: BS 1140.3 C35 2016.
+
+	\bibitem{jc04} Collins, John J.
+	\emph{Introduction to the Hebrew Bible}.
+	Minneapolis: Fortress, 2004.
+	AST library: BS 1140.3 C65 2004.
+
+	\bibitem{mc10} Coogan, Michael D.
+	\emph{The Old Testament: A Historical and Literary Introduction to the Hebrew Scriptures}.
+	3rd ed. New York: Oxford University Press, 2014.
+	AST library: BS 1197 C56 2014.
+
+	\bibitem{pdjr05} Davies, Philip R., and John Rogerson.
+	\emph{The Old Testament World}.
+	2nd ed. Louisville: Westminster John Knox, 2005.
+	AST library: BS 1171.3 D38 2005.
+
+	\bibitem{ed19} Davis, Ellen F.   
+	\emph{Opening Israel's Scriptures}.
+	New York: Oxford University Press, 2019.
+	AST library: \href{https://doi.org/10.1093/oso/9780190260545.001.0001}{online}.
+
+	\bibitem{ahjw09} Hill, Andrew E., and John H. Walton.
+	\emph{A Survey of the Old Testament}.
+	3rd ed. Grand Rapids: Zondervan, 2009.
+
+	\bibitem{hbfb} Kaminsky, Joel S., and Joel N. Lohr.
+	\emph{The Hebrew Bible for Beginners: A Jewish and Christian Introduction}.
+	Nashville: Abingdon Press, 2015.
+	AST library: BS 1171.3 K39 2015 and \href{https://search.ebscohost.com/login.aspx?direct=true&AuthType=cookie,ip,shib&db=nlebk&AN=969753&site=ehost-live&scope=site&custid=s5315951}{online}.
+
+	\bibitem{jk07} Kugel, James L. 
+	\emph{How To Read the Bible: A Guide to Scripture, Then and Now}.
+	New York: Free, 2007.
+
+	\bibitem{hprb10} Page, Hugh R., Jr., and Randall C. Bailey, eds.
+	\emph{The Africana Bible: Reading Israel’s Scriptures from Africa and the African Diaspora}.
+	Minneapolis: Fortress, 2010.
+	AST library: BS 1171.3 A37 2010.
+
+	\bibitem{rr86} Rendtorff, Rolf.
+	\emph{The Old Testament: An Introduction}.
+	Philadelphia: Fortress, 1986.
+	AST library: BS 1140.2 R3913 1986.
+	
+\end{thebibliography}
+\endgroup
 
 The following basic works are also worth owning and consulting.
 \cite{rlgs} in particular contains sound advice on core skills like
@@ -182,12 +221,12 @@ making oral presentations, and learning languages.
 
 	\bibitem[Making Sense]{rlgs} Northey, Margot, Bradford A. Anderson, and Joel N. Lohr.
 	\emph{Making Sense in Religious Studies: A Student's Guide to Research and Writing}.
-	3rd ed. Toronto: Oxford University Press, 2019. ISBN 978-0199026838.
+	3rd ed. Toronto: Oxford University Press, 2019.
 
 	\bibitem[SBL2]{sbl2} Collins, Billie Jean, et al.
 	\emph{The SBL Handbook of Style}.
-	2nd ed. Atlanta: SBL Press, 2014. ISBN 978-1589839649.
-	Designed to augment \href{http://www.chicagomanualofstyle.org/home.html}{\emph{Chicago Style}}
+	2nd ed. Atlanta: SBL Press, 2014.
+	Designed to augment \href{https://proxy.openathens.net/login?qurl=https%3A%2F%2Fwww.chicagomanualofstyle.org%2Fbook%2Fed17%2Ffrontmatter%2Ftoc.html}{\emph{Chicago Style}}
 	(the standard at AST), there is also a free
 	\href{https://www.sbl-site.org/assets/pdfs/pubs/SBLHSsupp2015-02.pdf}{Student Supplement for SBL2}.
 
@@ -204,40 +243,40 @@ the needs of the class.
 
 \newcommand\HBFB[1]{\cite[#1]{hbfb}}
 
-\setcolumncount{5}% set up \sessioncount, \unit{}, \noclass{}, and \reminder{memo}{date} macros
+\setcolumncount{4}% set up \sessioncount, \unit{}, \noclass{}, and \reminder{memo}{date} macros
 \begin{table}[htbp]% set to `p' to put the schedule on its own page
   \centering
-  \begin{tabular}{>{\sessioncount.}r@{ }lllr}% make sure the column config agrees with \setcolumncount
+  \begin{tabular}{>{\sessioncount.}r@{ }llr}% make sure the column config agrees with \setcolumncount
 	\toprule
-	\sessionskip{\textbf{\S}.}&\textbf{Primary (chapters)}&\textbf{Secondary (pgs)}&\textbf{Supplement (author)}&\textbf{Due}\\
+	\sessionskip{\textbf{\S}.}&\textbf{Primary reading (chs)}&\textbf{Supplementary reading}&\textbf{Due}\\
 	\midrule
 
 	\unit{Law / Torah / Pentateuch} \\
 
-		& Genesis 1--11        & \HBFB{1--26}    & Davis \cite{ed03}, Seitz  \cite{cs96} & \Int{12}{} Sep. \\
-		& Genesis 12--50       & \HBFB{27--64}   & Levenson                  \cite{jl12} & \Int{19}{} Sep. \\
-		& Exodus 1--34         & \HBFB{65--75}   & McGinnis                  \cite{cm12} & \Int{26}{} Sep. \\
-		& Leviticus 1--16      & \HBFB{77--83}   & Anderson                  \cite{ga17} & \Int{ 3}{} Oct. \\
-	\noclass{Thanksgiving Monday: AST closed}                                            & \Int{10}{} Oct. \\
-		& Deuteronomy          & \HBFB{85--99}   & \cite{heschel} or Moberly \cite{wm13} & \Int{17}{} Oct. \\
-	\reminder{A first short paper is \textbf{due} by the end of the fifth week of class}{21 Oct.}    \\
-	\noclass{Reading Week: No classes}                                                   & \Int{24}{} Oct. \\ [1ex]% NB Moved back from wk 6 to wk 5 because of the extra week break for Thanksgiving Monday in F21 (similar in F22). Perhaps move back to wk 6 in future.
+		& Genesis 1--11        & Davis \cite{ed03}; Seitz \cite{cs96} &  7 Sep. \\
+		& Genesis 12--50       & Levenson                 \cite{jl12} & 14 Sep. \\
+		& Exodus 1--18         & McGinnis                 \cite{cm12} & 21 Sep. \\
+		& Exodus 19--40        & Anderson                 \cite{ga17} & 28 Sep. \\
+	    & Leviticus (all if unstated) & Anderson          \cite{ga17} &  5 Oct. \\
+		& Deuteronomy          & Heschel \cite{ah51}; Moberly \cite{wm13} & 12 Oct. \\
+	\reminder{A first short paper is \textbf{due} by the end of the sixth week of class}{17 Oct.} \\ [1ex]% Have moved btw wks 5 and 6 depending on how holidays (eg, Thanksgiving Monday) impact the schedule
 
 	\unit{Prophets: Former \textit{\&} Latter} \\
 
-		& Joshua, Judges       & \HBFB{103--121} & Trible                    \cite{pt84} & \Int{31}{} Oct. \\
-		& 1 \& 2 Samuel        & \HBFB{123--134} & Chapman                   \cite{sc16} & \Int{ 7}{} Nov. \\
-		& 1 \& 2 Kings         & \HBFB{135--143} & Alter                     \cite{ra81} & \Int{14}{} Nov. \\
-		& Isaiah 1--12, 36--40 & \HBFB{145--168} & \cite{irenaeus} or Davis  \cite{ed14} & \Int{21}{} Nov. \\
-		& Hosea--Jonah         & \HBFB{169--184} & Nogalski          \cite{jn07a, jn07b} & \Int{28}{} Nov. \\
+		& Joshua; Judges       & Trible                   \cite{pt84} & 19 Oct. \\
+	\noclass{Reading Week}                                            & 24--27 Oct. \\
+		& 1 \& 2 Samuel        & Chapman                  \cite{sc16} &  2 Nov. \\
+		& 1 \& 2 Kings         & Alter                    \cite{ra81} &  9 Nov. \\
+		& Isaiah 1--12, 36--40 & Irenaeus \cite{il97}; Davis \cite{ed14} & 16 Nov. \\
+		& Hosea--Jonah         & Nogalski         \cite{jn07a, jn07b} & 23 Nov. \\
 	\reminder{A second short paper is \textbf{due} by the end of the tenth week of class}{2 Dec.}    \\ [1ex]% NB Moved back from wk 11 to wk 10 because of the nearness of the last day of class in F22. Perhaps move back to wk 11 in future.
 
 	\unit{Writings: Wisdom \textit{\&} Praise} \\
 
-		& Psalms 1--8, 41, 51, 89–90 & \HBFB{187--202} & deClaissé-Walford  \cite{ndw14} & \Int{ 5}{} Dec. \\
-		& Ecclesiastes         & \HBFB{203--246} & Dell \cite{kd13} or Fox   \cite{mf04} & \Int{12}{} Dec. \\ [1ex]
+		& Psalms 1--8; Ecclesiastes & deClaissé-Walford \cite{ndw14}; Fox \cite{mf04} & 30 Nov. \\ [1ex]
+%		& Ecclesiastes         & Dell \cite{kd13} or  &  7 Dec. \\ [1ex]
 
-	\reminder{End of Term: Final marks are due for all courses}{15 Dec.} \\
+	\reminder{End of Term: Final marks are due for all courses}{14 Dec.} \\
 
 	\bottomrule
   \end{tabular}
@@ -373,8 +412,6 @@ distributed as supplementary texts, as per \autoref{supplementary}.
 
 \bibitem{sc16} Chapman, Stephen B. “1 Samuel 1–12.” Pages 71–119 in \emph{1 Samuel as Christian Scripture: A Theological Commentary}. Grand Rapids: Eerdmans, 2016.
 
-\bibitem{scms16} Chapman, Stephen. B. and Marvin A. Sweeney, eds. \emph{The Cambridge Companion to the Hebrew Bible/Old Testament}. Cambridge, Cambridge University Press, 2016.
-
 \bibitem{bc79} Childs, Brevard S. \emph{Introduction to the Old Testament as Scripture}. Philadelphia: Fortress, 1979.
 
 \bibitem{bc92} Childs, Brevard S. \emph{Biblical Theology of the Old and New Testaments: Theological Reflection on the Christian Bible}. Minneapolis: Fortress, 1992.
@@ -384,8 +421,6 @@ distributed as supplementary texts, as per \autoref{supplementary}.
 \bibitem{ed03} Davis, Ellen F. “Teaching the Bible Confessionally in the Church.” Pages 9–26 in \emph{The Art of Reading Scripture}. Edited by Ellen F. Davis and Richard B. Hays. Grand Rapids: Eerdmans, 2003.
 
 \bibitem{ed14} Davis, Ellen F. \emph{Biblical Prophecy: Perspectives for Christian Theology, Discipleship, and Ministry}. Louisville: Westminster John Knox, 2014.
-
-\bibitem{ed19} Davis, Ellen F. \emph{Opening Israel’s Scriptures}. Oxford: Oxford University Press, 2019.
 
 \bibitem{ndw14} deClaissé-Walford, Nancy L. “The Meta-Narrative of the Psalter.” Pages 363–76 in \emph{The Oxford Handbook of the Psalms}. Edited by William P. Brown. Oxford: Oxford University Press, 2014.
 
@@ -414,8 +449,6 @@ distributed as supplementary texts, as per \autoref{supplementary}.
 \bibitem{jn07a} Nogalski, James D. “Reading the Book of the Twelve Theologically.” \emph{Interpretation} 61.2 (2007): 115–22.
 
 \bibitem{jn07b} Nogalski, James D. “Recurring Themes in the Book of the Twelve: Creating Points of Contact for a Theological Reading.” \emph{Interpretation} 61.2 (2007): 125–36.
-
-\bibitem{hp10} Page, Hugh R. et al., eds. \emph{The Africana Bible: Reading Israel’s Scriptures from Africa and the African Diaspora}. Minneapolis: Fortress, 2010.
 
 \bibitem{db89} Patrick, Dale. “Studying Biblical Law as a Humanities.” \emph{Semeia} 45 (1989): 27–47.
 
